Added android compatibility and added view album screen
